Assembler/tests/ok/constants/longs.asm
someLong: .long 0x98765432,1234578
