Assembler/tests/bad/duplicate_data_labels.asm
someLong: .long 0x98765432
someLong: .long 0x98765432
